@@ -19,11 +19,12 @@ module TestEnvironment
 
   # Create a testing environment for gems.
   def create
-#    return if File.exist? "test/data/gemhome/gems/a-0.0.1"
     Dir.chdir("test/data") do
       mkdir "lib" unless File.exists? "lib"
-      open("lib/code.rb", "w") do |f| f.puts "CODE = 1" end unless
-        File.exists? "lib/code.rb"
+      open("lib/code.rb", "w") do |f|
+        f.puts "CODE = 1"
+      end unless File.exists? "lib/code.rb"
+
       spec = Gem::Specification.new do |s|
         s.files = ['lib/code.rb']
         s.name = "a"
@@ -32,6 +33,7 @@ module TestEnvironment
         s.description = "desc"
         s.require_path = 'lib'
       end
+
       use_ui(MockGemUi.new) do
         Gem::Builder.new(spec).build
         spec.version = "0.0.2"
@@ -43,10 +45,12 @@ module TestEnvironment
         Gem::Builder.new(spec).build
         FileUtils.rm_rf "gemhome"
         FileUtils.mkdir("gemhome")
-        Gem::Installer.new("a-0.0.1.gem").install(false, "gemhome", false)
-        Gem::Installer.new("a-0.0.2.gem").install(false, "gemhome", false)
-        Gem::Installer.new("b-0.0.2.gem").install(false, "gemhome", false)
-        Gem::Installer.new("c-1.2.gem").install(false, "gemhome", false)
+        dest_dir = File.expand_path 'gemhome'
+        dest_dir.untaint
+        Gem::Installer.new("a-0.0.1.gem").install(false, dest_dir, false)
+        Gem::Installer.new("a-0.0.2.gem").install(false, dest_dir, false)
+        Gem::Installer.new("b-0.0.2.gem").install(false, dest_dir, false)
+        Gem::Installer.new("c-1.2.gem").install(false, dest_dir, false)
       end
     end
   end
